Closed Bug 562594 Opened 14 years ago Closed 14 years ago

comparison between signed and unsigned integer expressions in ReadStrings

Categories

(Toolkit :: Startup and Profile System, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file, 2 obsolete files)

In function ‘int ReadStrings(const NS_tchar*, const char*, int, char (*)[200])’:
readstrings.cpp:235: warning: comparison between signed and unsigned integer expressions
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #442341 - Flags: review?(ted.mielczarek)
Attached patch linking version (obsolete) — Splinter Review
Attachment #442341 - Attachment is obsolete: true
Attachment #442353 - Flags: review?(ted.mielczarek)
Attachment #442341 - Flags: review?(ted.mielczarek)
Attachment #442353 - Flags: review?(ted.mielczarek) → review?(robert.bugzilla)
Comment on attachment 442353 [details] [diff] [review]
linking version

># HG changeset patch
># Parent 1a32777b5ac8d31165a1acac7b63f7be91b2292d
># User timeless@mozdev.org
>Bug 562594 comparison between signed and unsigned integer expressions in ReadStrings
>r=ted
>
>diff --git a/toolkit/mozapps/readstrings/readstrings.cpp b/toolkit/mozapps/readstrings/readstrings.cpp
>--- a/toolkit/mozapps/readstrings/readstrings.cpp
>+++ b/toolkit/mozapps/readstrings/readstrings.cpp
>@@ -151,7 +151,7 @@ find_key(const char *keyList, char* key)
>  * @param results    Two-dimensional array of strings to be filled in the same order as the keys provided
>  */
> int
>-ReadStrings(const NS_tchar *path, const char *keyList, int numStrings, char results[][MAX_TEXT_LEN])
>+ReadStrings(const NS_tchar *path, const char *keyList, unsigned int numStrings, char results[][MAX_TEXT_LEN])
This also needs to be updated in readstrings.h

r+ with that
Attachment #442353 - Flags: review?(robert.bugzilla) → review+
Attached patch declaredSplinter Review
Attachment #442353 - Attachment is obsolete: true
Attachment #447066 - Flags: review+
timeless, you want me to push this patch?
sure/please, and any others of mine. i have a terrible time finding happy tree hours and generally don't try. thanks :)
Pushed to mozilla-central
http://hg.mozilla.org/mozilla-central/rev/c69ac5e96d0d
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Flags: in-litmus-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: