Bug 562594 - comparison between signed and unsigned integer expressions in ReadStrings. r=rstrong